package edu.hitsz.prop;

public interface PropFactory {
    public abstract AbstractProp createProp(int locationX,int locationY);
}
